--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./CSS/style.css">
     <title>Dashboard</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav>
+            <div>
+                <img src="./assets/profile.png" alt="profile">
+            </div>
+            <div>
+                <p>dashboard</p>
+            </div>
+            <div>
+                <i class="fa-solid fa-bell"></i>
+            </div>
+        </nav>
+    </header>
+
+    <script src="./JS/main.js"></script>
 </body>
+
 </html>
