add section-1 information

--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
         </nav>
     </header>
 
+    <main>
+        <section class="home">
+            <div class="information">
+                <div>
+                    <input type="search" name="search" id="search" placeholder="SEARCH">
+                </div>
+
+                <div class="total">
+                    <div class="users">
+                        <h3>USERS</h3>
+                        <span>1,234</span>
+                    </div>
+                    <div class="sales">
+                        <h3>SALES</h3>
+                        <span>5,678</span>
+                    </div>
+                </div>
+
+                <div class="revenue">
+                    <h3>REVENUE</h3>
+                    <span>$8,908</span>
+                </div>
+            </div>
+        </section>
+    </main>
+
     <script src="./JS/main.js"></script>
 </body>
 
