add products on home section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,40 @@
                     <span>$8,908</span>
                 </div>
             </div>
+
+            <!-- recent activaty -->
+            <div class="recent">
+                <h2>Recent Activity</h2>
+                <div class="products">
+                    <div class="carda">
+                        <div>
+                            <img src="./assets/product1.png" alt="product1">
+                        </div>
+                        <div>
+                            <h3>Product1</h3>
+                            <p>Order #12345</p>
+                        </div>
+                    </div>
+                    <div class="cardb">
+                        <div>
+                            <img src="./assets/product2.png" alt="product2">
+                        </div>
+                        <div>
+                            <h3>Product2</h3>
+                            <p>Order #12345</p>
+                        </div>
+                    </div>
+                    <div class="cardc">
+                        <div>
+                            <img src="./assets/product3.png" alt="product3">
+                        </div>
+                        <div>
+                            <h3>Product3</h3>
+                            <p>Order #12345</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
