--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
         </section>
     </main>
 
+    <!-- footer -->
+    <footer>
+        <div class="items">
+            <div> <i class="fa-solid fa-house active"></i> </div>
+            <div> <i class="fa-solid fa-chart-pie"></i> </div>
+            <div> <i class="fa-solid fa-gears"></i> </div>
+        </div>
+    </footer>
     <script src="./JS/main.js"></script>
 </body>
 
