--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <img src="./assets/profile.png" alt="profile">
             </div>
             <div>
-                <p>dashboard</p>
+                <h2>dashboard</h2>
             </div>
             <div>
                 <i class="fa-solid fa-bell"></i>
@@ -81,6 +81,31 @@
                             <p>Order #12345</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- analytics -->
+        <section class="analytics">
+            <h2>ANALYTICS</h2>
+            <div class="overview">
+                <h3>OVERVIEW</h3>
+                <div class="OVTotal">
+                    <div class="TOTUser">
+                        <h3>Total Users</h3>
+                        <p>1,234</p>
+                        <span>+10%</span>
+                    </div>
+                    <div class="ActiveUser">
+                        <h3>Active Users</h3>
+                        <p>578</p>
+                        <span>+5%</span>
+                    </div>
+                </div>
+                <div class="NewUser">
+                    <h3>New Users</h3>
+                    <p>908</p>
+                    <span>+20%</span>
                 </div>
             </div>
         </section>
