--- a/index.html
+++ b/index.html
@@ -92,20 +92,36 @@
                 <h3>OVERVIEW</h3>
                 <div class="OVTotal">
                     <div class="TOTUser">
-                        <h3>Total Users</h3>
+                        <h4>Total Users</h4>
                         <p>1,234</p>
                         <span>+10%</span>
                     </div>
                     <div class="ActiveUser">
-                        <h3>Active Users</h3>
+                        <h4>Active Users</h4>
                         <p>578</p>
                         <span>+5%</span>
                     </div>
                 </div>
                 <div class="NewUser">
-                    <h3>New Users</h3>
+                    <h4>New Users</h4>
                     <p>908</p>
                     <span>+20%</span>
+                </div>
+            </div>
+
+            <div class="engagment">
+                <h3>Engagement</h3>
+
+                <div class="engagContent">
+                    <div>
+                        <h4>User Engagement</h4>
+                        <p>73%</p>
+                        <span>Last 30 Days</span>
+                        <span>+5%</span>
+                    </div>
+                    <div>
+                        <img src="./assets/engagment.png" alt="engagment analytics">
+                    </div>
                 </div>
             </div>
         </section>
