analytics engagment SessionDuration

--- a/index.html
+++ b/index.html
@@ -117,10 +117,22 @@
                         <h4>User Engagement</h4>
                         <p>73%</p>
                         <span>Last 30 Days</span>
-                        <span>+5%</span>
+                        <span class="green">+5%</span>
                     </div>
                     <div>
                         <img src="./assets/engagment.png" alt="engagment analytics">
+                    </div>
+                </div>
+
+                <div class="SessionDuration">
+                    <div>
+                        <h4>Session Duration</h4>
+                        <p>5 MIN</p>
+                        <span>Last 30 Days</span>
+                        <span class="red">-2%</span>
+                    </div>
+                    <div>
+                        <img src="./assets/engagment2.png" alt="engagment analytics">
                     </div>
                 </div>
             </div>
