add analytics sales

--- a/index.html
+++ b/index.html
@@ -136,6 +136,34 @@
                     </div>
                 </div>
             </div>
+
+            <div class="ANAsales">
+                <h3>Sales</h3>
+
+                <div class="salesContent">
+                    <div>
+                        <h4>Sales Trends</h4>
+                        <p>$12,345</p>
+                        <span>Last 30 Days</span>
+                        <span class="green">+15%</span>
+                    </div>
+                    <div>
+                        <img src="./assets/engagment.png" alt="engagment analytics">
+                    </div>
+                </div>
+
+                <div class="revenueOverTime">
+                    <div>
+                        <h4>Revenue Over Time</h4>
+                        <p>$6,789</p>
+                        <span>Last 30 Days</span>
+                        <span class="green">+8%</span>
+                    </div>
+                    <div>
+                        <img src="./assets/engagment2.png" alt="engagment analytics">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
