add settings section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,47 @@
                 </div>
             </div>
         </section>
+
+        <!-- settings -->
+        <section class="settings">
+            <h2>Settings</h2>
+            <div class="profile">
+                <h3>Profile</h3>
+                <div class="settflex">
+                    <div>
+                        <img src="./assets/settings.png" alt="profile">
+                    </div>
+                    <div>
+                        <h4>Profile Information</h4>
+                        <span>Edit your profile information</span>
+                    </div>
+                </div>
+            </div>
+            <div class="notification">
+                <h3>Notification</h3>
+                <div class="settflex">
+                    <div>
+                        <img src="./assets/settings1.png" alt="notification">
+                    </div>
+                    <div>
+                        <h4>Notification Preferences</h4>
+                        <span>Manage your notification preferences</span>
+                    </div>
+                </div>
+            </div>
+            <div class="account">
+                <h3>Account</h3>
+                <div class="settflex">
+                    <div>
+                        <img src="./assets/settings2.png" alt="account">
+                    </div>
+                    <div>
+                        <h4>Account Details</h4>
+                        <span>Manage your account details</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer -->
